--- a/index.html
+++ b/index.html
@@ -191,14 +191,13 @@
             </div>
             </div>
           </section>
-
             <!-- search-bar section -->
         <section class="matches-search-container">
             <div class="matches-search">
                 <h3> Matches Scores & Fixtures</h3>
                 <input class="search-bar" type="text" placeholder="Enter the compition">
                 <a target="_blank" id="submit-button"
-                    href="https://www.goal.com/en-in/live-scores"><strong>Search</strong> </a>
+                    href="https://sports.ndtv.com/football/live-scores"><strong>Search</strong> </a>
             </div>
         </section>
        
